# farm-plugin-replace-dirname

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  farm.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: six-schools-jog.md
.github/workflows/: build.yaml  release.yml
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
playground/: b.js  farm.config.ts  index.js  package.json
scripts/: index.js  watch.bat
src/: base.rs  index.ts  lib.rs  swc.rs
