[package]
edition = "2021"
name = "farm_plugin_replace_dirname"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
farmfe_core = { version = "0.6.2" }
farmfe_toolkit_plugin_types = { version = "0.0.18" }
farmfe_toolkit = { version = "0.0.11" }
farmfe_macro_plugin = { version = "0.0.4" }
regex = "1.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.3.1"
