[package]
edition = "2021"
name = "farm_plugin_replace_dirname"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
farmfe_core = { version = "0.6.4" }
farmfe_toolkit_plugin_types = { version = "0.0.20" }
farmfe_toolkit = { version = "0.0.13" }
farmfe_macro_plugin = { version = "0.0.4" }
regex = "1.7.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
url = "2.3.1"
